--- a/FeedKit.xcodeproj/xcshareddata/xcschemes/FeedKit Example macOS.xcscheme
+++ b/FeedKit.xcodeproj/xcshareddata/xcschemes/FeedKit Example macOS.xcscheme
@@ -14,10 +14,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "A0EF4E0B1CE86D1E00C52142"
-               BuildableName = "FeedParser.framework"
-               BlueprintName = "FeedParser iOS"
-               ReferencedContainer = "container:FeedParser.xcodeproj">
+               BlueprintIdentifier = "A0EF4DD41CE86A7700C52142"
+               BuildableName = "FeedKit.app"
+               BlueprintName = "FeedKit Example macOS"
+               ReferencedContainer = "container:FeedKit.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -28,24 +28,14 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
-         <TestableReference
-            skipped = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "A09C84FD1CE9AE2300D20CAB"
-               BuildableName = "FeedParser iOS Tests.xctest"
-               BlueprintName = "FeedParser iOS Tests"
-               ReferencedContainer = "container:FeedParser.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
       </Testables>
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "A0EF4E0B1CE86D1E00C52142"
-            BuildableName = "FeedParser.framework"
-            BlueprintName = "FeedParser iOS"
-            ReferencedContainer = "container:FeedParser.xcodeproj">
+            BlueprintIdentifier = "A0EF4DD41CE86A7700C52142"
+            BuildableName = "FeedKit.app"
+            BlueprintName = "FeedKit Example macOS"
+            ReferencedContainer = "container:FeedKit.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
@@ -61,15 +51,16 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <MacroExpansion>
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "A0EF4E0B1CE86D1E00C52142"
-            BuildableName = "FeedParser.framework"
-            BlueprintName = "FeedParser iOS"
-            ReferencedContainer = "container:FeedParser.xcodeproj">
+            BlueprintIdentifier = "A0EF4DD41CE86A7700C52142"
+            BuildableName = "FeedKit.app"
+            BlueprintName = "FeedKit Example macOS"
+            ReferencedContainer = "container:FeedKit.xcodeproj">
          </BuildableReference>
-      </MacroExpansion>
+      </BuildableProductRunnable>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
@@ -79,15 +70,16 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <MacroExpansion>
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "A0EF4E0B1CE86D1E00C52142"
-            BuildableName = "FeedParser.framework"
-            BlueprintName = "FeedParser iOS"
-            ReferencedContainer = "container:FeedParser.xcodeproj">
+            BlueprintIdentifier = "A0EF4DD41CE86A7700C52142"
+            BuildableName = "FeedKit.app"
+            BlueprintName = "FeedKit Example macOS"
+            ReferencedContainer = "container:FeedKit.xcodeproj">
          </BuildableReference>
-      </MacroExpansion>
+      </BuildableProductRunnable>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
