--- a/FeedKit.xcodeproj/xcshareddata/xcschemes/FeedKit watchOS.xcscheme
+++ b/FeedKit.xcodeproj/xcshareddata/xcschemes/FeedKit watchOS.xcscheme
@@ -14,10 +14,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "A0EF4DF91CE86CA200C52142"
-               BuildableName = "FeedParser.framework"
-               BlueprintName = "FeedParser macOS"
-               ReferencedContainer = "container:FeedParser.xcodeproj">
+               BlueprintIdentifier = "A0370EB81CEF9D5A009583A3"
+               BuildableName = "FeedKit.framework"
+               BlueprintName = "FeedKit watchOS"
+               ReferencedContainer = "container:FeedKit.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -28,26 +28,7 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
-         <TestableReference
-            skipped = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "A09C851B1CE9AE6A00D20CAB"
-               BuildableName = "FeedParser macOS Tests.xctest"
-               BlueprintName = "FeedParser macOS Tests"
-               ReferencedContainer = "container:FeedParser.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
       </Testables>
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "A0EF4DF91CE86CA200C52142"
-            BuildableName = "FeedParser.framework"
-            BlueprintName = "FeedParser macOS"
-            ReferencedContainer = "container:FeedParser.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </TestAction>
@@ -64,10 +45,10 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "A0EF4DF91CE86CA200C52142"
-            BuildableName = "FeedParser.framework"
-            BlueprintName = "FeedParser macOS"
-            ReferencedContainer = "container:FeedParser.xcodeproj">
+            BlueprintIdentifier = "A0370EB81CEF9D5A009583A3"
+            BuildableName = "FeedKit.framework"
+            BlueprintName = "FeedKit watchOS"
+            ReferencedContainer = "container:FeedKit.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
@@ -82,10 +63,10 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "A0EF4DF91CE86CA200C52142"
-            BuildableName = "FeedParser.framework"
-            BlueprintName = "FeedParser macOS"
-            ReferencedContainer = "container:FeedParser.xcodeproj">
+            BlueprintIdentifier = "A0370EB81CEF9D5A009583A3"
+            BuildableName = "FeedKit.framework"
+            BlueprintName = "FeedKit watchOS"
+            ReferencedContainer = "container:FeedKit.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
    </ProfileAction>
