--- a/FeedKit.xcodeproj/xcshareddata/xcschemes/FeedKit Example macOS.xcscheme
+++ b/FeedKit.xcodeproj/xcshareddata/xcschemes/FeedKit Example macOS.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "A0EF4DD41CE86A7700C52142"
-               BuildableName = "FeedKit.app"
+               BuildableName = "FeedKit Example macOS.app"
                BlueprintName = "FeedKit Example macOS"
                ReferencedContainer = "container:FeedKit.xcodeproj">
             </BuildableReference>
@@ -33,7 +33,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "A0EF4DD41CE86A7700C52142"
-            BuildableName = "FeedKit.app"
+            BuildableName = "FeedKit Example macOS.app"
             BlueprintName = "FeedKit Example macOS"
             ReferencedContainer = "container:FeedKit.xcodeproj">
          </BuildableReference>
@@ -56,7 +56,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "A0EF4DD41CE86A7700C52142"
-            BuildableName = "FeedKit.app"
+            BuildableName = "FeedKit Example macOS.app"
             BlueprintName = "FeedKit Example macOS"
             ReferencedContainer = "container:FeedKit.xcodeproj">
          </BuildableReference>
@@ -75,7 +75,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "A0EF4DD41CE86A7700C52142"
-            BuildableName = "FeedKit.app"
+            BuildableName = "FeedKit Example macOS.app"
             BlueprintName = "FeedKit Example macOS"
             ReferencedContainer = "container:FeedKit.xcodeproj">
          </BuildableReference>
