--- a/FeedKit.xcodeproj/xcshareddata/xcschemes/FeedKit iOS.xcscheme
+++ b/FeedKit.xcodeproj/xcshareddata/xcschemes/FeedKit iOS.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "A0EF4E0B1CE86D1E00C52142"
-               BuildableName = "FeedParser.framework"
+               BuildableName = "FeedKit.framework"
                BlueprintName = "FeedKit iOS"
                ReferencedContainer = "container:FeedKit.xcodeproj">
             </BuildableReference>
@@ -33,7 +33,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "A09C84FD1CE9AE2300D20CAB"
-               BuildableName = "FeedKit.xctest"
+               BuildableName = "FeedKit iOS Tests.xctest"
                BlueprintName = "FeedKit iOS Tests"
                ReferencedContainer = "container:FeedKit.xcodeproj">
             </BuildableReference>
@@ -43,7 +43,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "A0EF4E0B1CE86D1E00C52142"
-            BuildableName = "FeedParser.framework"
+            BuildableName = "FeedKit.framework"
             BlueprintName = "FeedKit iOS"
             ReferencedContainer = "container:FeedKit.xcodeproj">
          </BuildableReference>
@@ -65,7 +65,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "A0EF4E0B1CE86D1E00C52142"
-            BuildableName = "FeedParser.framework"
+            BuildableName = "FeedKit.framework"
             BlueprintName = "FeedKit iOS"
             ReferencedContainer = "container:FeedKit.xcodeproj">
          </BuildableReference>
@@ -83,7 +83,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "A0EF4E0B1CE86D1E00C52142"
-            BuildableName = "FeedParser.framework"
+            BuildableName = "FeedKit.framework"
             BlueprintName = "FeedKit iOS"
             ReferencedContainer = "container:FeedKit.xcodeproj">
          </BuildableReference>
