--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,10 @@ env:
   - LC_CTYPE=en_US.UTF-8
   - LANG=en_US.UTF-8
   - PROJECT=FeedKit.xcodeproj
-  - IOS_SDK=iphonesimulator9.3
-  - OSX_SDK=macosx10.11
-  - TVOS_SDK=appletvsimulator9.2
-  - WATCHOS_SDK=watchsimulator2.2
+  - IOS_SDK=iphonesimulator10.0
+  - OSX_SDK=macosx10.12
+  - TVOS_SDK=appletvsimulator10.0
+  - WATCHOS_SDK=watchsimulator3.0
   # Framework targets
   - FRAMEWORK_SCHEME_IOS="FeedKit iOS"
   - FRAMEWORK_SCHEME_MACOS="FeedKit macOS"
@@ -20,18 +20,14 @@ env:
   - EXAMPLE_SCHEME_MACOS="FeedKit Example macOS"
   
   matrix:
-    - DESTINATION="OS=8.1,name=iPhone 4S"          SCHEME="$FRAMEWORK_SCHEME_IOS"     SDK="$IOS_SDK"     RUN_TESTS="YES" BUILD_EXAMPLE="YES" EXAMPLE_SCHEME="$EXAMPLE_SCHEME_IOS"   POD_LINT="YES" 
-    - DESTINATION="OS=8.2,name=iPhone 5"           SCHEME="$FRAMEWORK_SCHEME_IOS"     SDK="$IOS_SDK"     RUN_TESTS="YES" BUILD_EXAMPLE="YES" EXAMPLE_SCHEME="$EXAMPLE_SCHEME_IOS"   POD_LINT="NO" 
-    - DESTINATION="OS=8.3,name=iPhone 5S"          SCHEME="$FRAMEWORK_SCHEME_IOS"     SDK="$IOS_SDK"     RUN_TESTS="YES" BUILD_EXAMPLE="YES" EXAMPLE_SCHEME="$EXAMPLE_SCHEME_IOS"   POD_LINT="NO" 
-    - DESTINATION="OS=8.4,name=iPhone 6"           SCHEME="$FRAMEWORK_SCHEME_IOS"     SDK="$IOS_SDK"     RUN_TESTS="YES" BUILD_EXAMPLE="YES" EXAMPLE_SCHEME="$EXAMPLE_SCHEME_IOS"   POD_LINT="NO" 
-    - DESTINATION="OS=9.0,name=iPhone 6"           SCHEME="$FRAMEWORK_SCHEME_IOS"     SDK="$IOS_SDK"     RUN_TESTS="YES" BUILD_EXAMPLE="YES" EXAMPLE_SCHEME="$EXAMPLE_SCHEME_IOS"   POD_LINT="NO" 
-    - DESTINATION="OS=9.1,name=iPhone 6 Plus"      SCHEME="$FRAMEWORK_SCHEME_IOS"     SDK="$IOS_SDK"     RUN_TESTS="YES" BUILD_EXAMPLE="YES" EXAMPLE_SCHEME="$EXAMPLE_SCHEME_IOS"   POD_LINT="NO" 
-    - DESTINATION="OS=9.2,name=iPhone 6S"          SCHEME="$FRAMEWORK_SCHEME_IOS"     SDK="$IOS_SDK"     RUN_TESTS="YES" BUILD_EXAMPLE="YES" EXAMPLE_SCHEME="$EXAMPLE_SCHEME_IOS"   POD_LINT="NO" 
-    - DESTINATION="OS=9.3,name=iPhone 6S Plus"     SCHEME="$FRAMEWORK_SCHEME_IOS"     SDK="$IOS_SDK"     RUN_TESTS="YES" BUILD_EXAMPLE="YES" EXAMPLE_SCHEME="$EXAMPLE_SCHEME_IOS"   POD_LINT="NO" 
-    - DESTINATION="arch=x86_64"                    SCHEME="$FRAMEWORK_SCHEME_MACOS"   SDK="$OSX_SDK"     RUN_TESTS="YES" BUILD_EXAMPLE="YES" EXAMPLE_SCHEME="$EXAMPLE_SCHEME_MACOS" POD_LINT="NO" 
-    - DESTINATION="OS=9.2,name=Apple TV 1080p"     SCHEME="$FRAMEWORK_SCHEME_TVOS"    SDK="$TVOS_SDK"    RUN_TESTS="YES" BUILD_EXAMPLE="YES" EXAMPLE_SCHEME="$EXAMPLE_SCHEME_TVOS"  POD_LINT="NO" 
-    - DESTINATION="OS=2.2,name=Apple Watch - 42mm" SCHEME="$FRAMEWORK_SCHEME_WATCHOS" SDK="$WATCHOS_SDK" RUN_TESTS="NO"  BUILD_EXAMPLE="NO"  EXAMPLE_SCHEME=""                      POD_LINT="NO" 
-    
+    - DESTINATION="OS=9.0,name=iPhone 5"            SCHEME="$FRAMEWORK_SCHEME_IOS"     SDK="$IOS_SDK"     RUN_TESTS="YES" BUILD_EXAMPLE="YES" EXAMPLE_SCHEME="$EXAMPLE_SCHEME_IOS"   POD_LINT="YES" 
+    - DESTINATION="OS=10.0,name=iPhone 7"           SCHEME="$FRAMEWORK_SCHEME_IOS"     SDK="$IOS_SDK"     RUN_TESTS="YES" BUILD_EXAMPLE="YES" EXAMPLE_SCHEME="$EXAMPLE_SCHEME_IOS"   POD_LINT="NO"
+    - DESTINATION="OS=2.0,name=Apple Watch - 42mm"  SCHEME="$FRAMEWORK_SCHEME_WATCHOS" SDK="$WATCHOS_SDK" RUN_TESTS="NO"  BUILD_EXAMPLE="NO"  EXAMPLE_SCHEME=""                      POD_LINT="NO"
+    - DESTINATION="OS=3.0,name=Apple Watch - 42mm"  SCHEME="$FRAMEWORK_SCHEME_WATCHOS" SDK="$WATCHOS_SDK" RUN_TESTS="NO"  BUILD_EXAMPLE="NO"  EXAMPLE_SCHEME=""                      POD_LINT="NO"
+    - DESTINATION="OS=9.0,name=Apple TV 1080p"      SCHEME="$FRAMEWORK_SCHEME_TVOS"    SDK="$TVOS_SDK"    RUN_TESTS="YES" BUILD_EXAMPLE="YES" EXAMPLE_SCHEME="$EXAMPLE_SCHEME_TVOS"  POD_LINT="NO"
+    - DESTINATION="OS=10.0,name=Apple TV 1080p"     SCHEME="$FRAMEWORK_SCHEME_TVOS"    SDK="$TVOS_SDK"    RUN_TESTS="YES" BUILD_EXAMPLE="YES" EXAMPLE_SCHEME="$EXAMPLE_SCHEME_TVOS"  POD_LINT="NO" 
+    - DESTINATION="arch=x86_64"                     SCHEME="$FRAMEWORK_SCHEME_MACOS"   SDK="$OSX_SDK"     RUN_TESTS="YES" BUILD_EXAMPLE="YES" EXAMPLE_SCHEME="$EXAMPLE_SCHEME_MACOS" POD_LINT="NO"
+
 script:
   - set -o pipefail
   - xcodebuild -version
