--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,9 @@ env:
     - DESTINATION="OS=10.0,name=Apple TV 1080p"     SCHEME="$FRAMEWORK_SCHEME_TVOS"    SDK="$TVOS_SDK"    RUN_TESTS="YES" BUILD_EXAMPLE="YES" EXAMPLE_SCHEME="$EXAMPLE_SCHEME_TVOS"  POD_LINT="NO" 
     - DESTINATION="arch=x86_64"                     SCHEME="$FRAMEWORK_SCHEME_MACOS"   SDK="$OSX_SDK"     RUN_TESTS="YES" BUILD_EXAMPLE="YES" EXAMPLE_SCHEME="$EXAMPLE_SCHEME_MACOS" POD_LINT="NO"
 
+before_install:
+  - gem install cocoapods --pre --no-rdoc --no-ri --no-document --quiet
+  
 script:
   - set -o pipefail
   - xcodebuild -version
