--- a/.travis.yml
+++ b/.travis.yml
@@ -52,5 +52,5 @@ script:
     
   # Run `pod lib lint` if specified
   - if [ $POD_LINT == "YES" ]; then
-        pod lib lint --verbose;
+        pod lib lint;
     fi
