--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,8 +13,11 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+
+      - name: Set up Swift 6.0
+        uses: swift-actions/setup-swift@v2
         with:
-          version: 6.0
+          swift-version: "6.0"
 
       - name: Build Package
         run: swift build
