--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Set up Swift 6.0
         uses: swift-actions/setup-swift@v2
         with:
-          swift-version: "6.0"
+          swift-version: '6.0'
 
       - name: Build Package
         run: swift build
