--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,3 +58,19 @@ jobs:
 
       - name: Build and Test
         run: xcodebuild -scheme FeedKit-Package -destination 'platform=iOS Simulator,name=iPhone 16' test
+
+  macos-build-and-test-xcodebuild-macos:
+    name: build and test (xcodebuild macos)
+    runs-on: macos-15
+    steps:
+      - name: Check out code
+        uses: actions/checkout@v4
+
+      - name: Select Xcode
+        run: sudo xcode-select -s /Applications/Xcode_16.0.app
+
+      - name: List available devices
+        run: xcrun simctl list devices available
+
+      - name: Build and Test
+        run: xcodebuild -scheme FeedKit-Package -destination 'platform=macOS,arch=arm64' test
